--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,7 @@ os: linux
 files:
   - source: build/libs/server-0.0.1-SNAPSHOT.jar
     destination: /home/ec2-user/serverJar
+ApplicationStart:
+  - location: bashScripts/afterInstall.sh
+    timeout: 300
+    runas: root
