--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,10 @@ os: linux
 files:
   - source: build/libs/server-0.0.1-SNAPSHOT.jar
     destination: /home/ec2-user/serverJar
+BeforeInstall:
+  - location: bashScripts/beforeInstall.sh
+    timeout: 300
+    runas: root
 ApplicationStart:
   - location: bashScripts/applicationStart.sh
     timeout: 300
