--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
-server.port=8080
+server.port=80
 server.servlet.context-path=/api/v1
-spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=secret
+spring.data.neo4j.uri=${SPRING_NEO4J_URI}
+spring.data.neo4j.username=${SPRING_NEO4J_USER}
+spring.data.neo4j.password=${SPRING_NEO4J_PASS}
