--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,7 @@ hooks:
   BeforeInstall:
     - location: bashScripts/beforeInstall.sh
       timeout: 300
-      runas: root
+      runas: ec2-user
   ApplicationStart:
     - location: bashScripts/applicationStart.sh
       timeout: 300
