Resync/refactor + add DTO layer and tests + removed request models

--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.codehaus.groovy:groovy'
+	implementation 'org.modelmapper:modelmapper:2.3.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
