added get and post for images

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,3 +2,7 @@ server.port=8080
 server.servlet.context-path=/api/v1
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=secret
+aws.access.key.id=AKIAQB7DFBO73ZT4XHVG
+aws.access.key.secret=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
+aws.region=us-east-1
+aws.s3.audio.bucket=dungeon-maps
