--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.codehaus.groovy:groovy'
 	implementation 'org.modelmapper:modelmapper:2.3.0'
+	compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.550'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
