--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/api/v1
 spring.data.neo4j.uri=${SPRING_NEO4J_URI}
 spring.data.neo4j.username=${SPRING_NEO4J_USER}
 spring.data.neo4j.password=${SPRING_NEO4J_PASS}
-aws.access.key.id=AKIAQB7DFBO73ZT4XHVG
-aws.access.key.secret=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
-aws.region=us-east-1
-aws.s3.audio.bucket=dungeon-maps
+aws.access.key.id=${SPRING_AWS_ACCESS_KEY}
+aws.access.key.secret=${SPRING_AWS_SECRET_KEY}
+aws.region=${SPRING_AWS_DEFAULT_REGION}
+aws.s3.audio.bucket=${SPRING_S3_AUDIO_BUCKET}
