--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@ server.port=8080
 server.servlet.context-path=/api/v1
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=secret
-aws.access.key.id=AKIAQB7DFBO73ZT4XHVG
-aws.access.key.secret=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
-aws.region=us-east-1
-aws.s3.audio.bucket=dungeon-maps
+aws.access.key.id=${SPRING_AWS_ACCESS_KEY}
+aws.access.key.secret=${SPRING_AWS_SECRET_KEY}
+aws.region=${SPRING_AWS_DEFAULT_REGION}
+aws.s3.audio.bucket=${SPRING_S3_AUDIO_BUCKET}
